@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.2 2018/07/28 14:40:51 brook Exp $
+# $NetBSD: Makefile,v 1.3 2019/07/31 20:35:18 brook Exp $
 
-CATEGORIES=	math
+CATEGORIES=	math R
 
 MAINTAINER=	minskim@NetBSD.org
 HOMEPAGE=	http://tibble.tidyverse.org/
@@ -8,15 +8,16 @@ COMMENT=	Simple data frames
 LICENSE=	mit
 
 R_PKGNAME=	tibble
-R_PKGVER=	1.4.2
+R_PKGVER=	2.1.3
 
-DEPENDS+=	R-cli-[0-9]*:../../devel/R-cli
-DEPENDS+=	R-crayon-[0-9]*:../../devel/R-crayon
-DEPENDS+=	R-pillar>=1.1.0:../../misc/R-pillar
-DEPENDS+=	R-rlang-[0-9]*:../../devel/R-rlang
+DEPENDS+=	R-cli>=1.1.0:../../devel/R-cli
+DEPENDS+=	R-crayon>=1.3.4:../../devel/R-crayon
+DEPENDS+=	R-fansi>=0.4.0:../../devel/R-fansi
+DEPENDS+=	R-pkgconfig>=2.0.2:../../devel/R-pkgconfig
+DEPENDS+=	R-rlang>=0.3.0:../../devel/R-rlang
+DEPENDS+=	R-pillar>=1.3.1:../../misc/R-pillar
 
 USE_LANGUAGES=	c
 
-BUILDLINK_API_DEPENDS.R+=	R>=3.1.0
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
